--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
+    "react/jsx-one-expression-per-line": "off",
     "prettier/prettier": "error",
     "react/jsx-filename-extension": [1, {
       "extensions": [".tsx"]
